List.of replaced by Arrays.asList in related test methods