@@ -10,6 +10,7 @@ import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 
@@ -40,7 +41,7 @@ class RoomServicesServiceImplTest {
         roomService1 = new RoomService(1L, CLEANING.name(), 12.3);
         roomService2 = new RoomService(2L, REPAIR.name(), 16.2);
         roomService3 = new RoomService(3L, MAINTENANCE.name(), 14.6);
-        roomServices = List.of(roomService1, roomService2, roomService3);
+        roomServices = Arrays.asList(roomService1, roomService2, roomService3);
     }
 
     @Test
